--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vs-favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    
+    <!-- Primary Meta Tags -->
+    <title>vS Vault | The Liquid Staking Protocol for Vesting Tokens</title>
+    <meta name="title" content="vS Vault | The Liquid Staking Protocol for Vesting Tokens" />
+    <meta name="description" content="Activate your locked capital. vS Vault is a decentralized protocol that transforms vesting-locked tokens into liquid, yield-bearing assets, starting with Sonic fNFTs." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://vs-token-mvp.vercel.app/" />
+    <meta property="og:title" content="vS Vault | The Liquid Staking Protocol for Vesting Tokens" />
+    <meta property="og:description" content="Activate your locked capital. vS Vault is a decentralized protocol that transforms vesting-locked tokens into liquid, yield-bearing assets, starting with Sonic fNFTs." />
+    <meta property="og:image" content="https://vs-token-mvp.vercel.app/social-preview.svg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://vs-token-mvp.vercel.app/" />
+    <meta property="twitter:title" content="vS Vault | The Liquid Staking Protocol for Vesting Tokens" />
+    <meta property="twitter:description" content="Activate your locked capital. vS Vault is a decentralized protocol that transforms vesting-locked tokens into liquid, yield-bearing assets, starting with Sonic fNFTs." />
+    <meta property="twitter:image" content="https://vs-token-mvp.vercel.app/social-preview.svg" />
+
   </head>
   <body>
     <div id="root"></div>
