feat: Update meta tags for Sonic airdrop focus
- Change title to 'Turn Sonic Airdrop fNFTs into Liquid DeFi Tokens'
- Update description to emphasize 9-month wait problem and solution
- Improve SEO targeting for Sonic airdrop recipients

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,22 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Primary Meta Tags -->
-    <title>vS Vault | The Liquid Staking Protocol for Vesting Tokens</title>
-    <meta name="title" content="vS Vault | The Liquid Staking Protocol for Vesting Tokens" />
-    <meta name="description" content="Activate your locked capital. vS Vault is a decentralized protocol that transforms vesting-locked tokens into liquid, yield-bearing assets, starting with Sonic fNFTs." />
+    <title>vS Vault | Turn Sonic Airdrop fNFTs into Liquid DeFi Tokens</title>
+    <meta name="title" content="vS Vault | Turn Sonic Airdrop fNFTs into Liquid DeFi Tokens" />
+    <meta name="description" content="Don't wait 9 months for your Sonic airdrop. Deposit your fNFT, get tradeable vS tokens immediately, redeem 1:1 at maturity. Skip the wait, join DeFi today." />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://vs-token-mvp.vercel.app/" />
-    <meta property="og:title" content="vS Vault | The Liquid Staking Protocol for Vesting Tokens" />
-    <meta property="og:description" content="Activate your locked capital. vS Vault is a decentralized protocol that transforms vesting-locked tokens into liquid, yield-bearing assets, starting with Sonic fNFTs." />
+    <meta property="og:title" content="vS Vault | Turn Sonic Airdrop fNFTs into Liquid DeFi Tokens" />
+    <meta property="og:description" content="Don't wait 9 months for your Sonic airdrop. Deposit your fNFT, get tradeable vS tokens immediately, redeem 1:1 at maturity. Skip the wait, join DeFi today." />
     <meta property="og:image" content="https://vs-token-mvp.vercel.app/social-preview.svg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://vs-token-mvp.vercel.app/" />
-    <meta property="twitter:title" content="vS Vault | The Liquid Staking Protocol for Vesting Tokens" />
-    <meta property="twitter:description" content="Activate your locked capital. vS Vault is a decentralized protocol that transforms vesting-locked tokens into liquid, yield-bearing assets, starting with Sonic fNFTs." />
+    <meta property="twitter:title" content="vS Vault | Turn Sonic Airdrop fNFTs into Liquid DeFi Tokens" />
+    <meta property="twitter:description" content="Don't wait 9 months for your Sonic airdrop. Deposit your fNFT, get tradeable vS tokens immediately, redeem 1:1 at maturity. Skip the wait, join DeFi today." />
     <meta property="twitter:image" content="https://vs-token-mvp.vercel.app/social-preview.svg" />
 
   </head>
